# routes/v1/auth.php
@@ -34,10 +34,11 @@ Route::prefix('auth')->group(function (): void {
         ->name('verification.send');
 
     Route::post('/logout', [AuthenticatedSessionController::class, 'destroy'])
-        ->middleware('auth')
+        ->middleware('auth:sanctum')
         ->name('logout');
 
     Route::get('/google/url', [GoogleAuthController::class, 'googleAuthUrl']);
     Route::post('/google/login', [GoogleAuthController::class, 'googleOauthLogin']);
 
+    Route::post('/refresh-token', [AuthenticatedSessionController::class, 'refreshToken']);
 });
